--- a/public/index.html
+++ b/public/index.html
@@ -33,5 +33,8 @@
     - [https://sos2122-24.herokuapp.com/api/v1/my-awesome-resource-3/docs](https://sos2122-24.herokuapp.com/api/v1/my-awesome-resource-3/docs) (developed by [Alicia Campos Castello](https://github.com/AliciaCamposCastello))
   </h3>
   </h2>
+
+  <a href="/cool"><button type="button">Pincha en mi</button></a>
+    
   </body>
 </html>
