--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
         <h3>Team</h3>
         <p>- <a href="https://github.com/Rgm13">Raúl Gómez Morales</a></p>
         <p>- <a href="https://github.com/Lauramartinezsanchez">Laura Martínez Sánchez</a></p>
+        <p>- <a href="https://github.com/AliciaCamposCastello">Alicia Campos Castelló</a></p>
         
         <h3>Project description:</h3> Nuestras fuentes de información esta orientadas a analizar la relación que existe entre la tasa de muertes por neumonia, la tasa de muertes por cancer y la contaminacion del aire en interiores. 
         <h3>Repository:</h3><a href="https://github.com/gti-sos/SOS2122-24.git">gti-sos/SOS2122-24</a>
@@ -12,6 +13,7 @@
         <h3>APIS:</h3>
         <p>- <a href="https://sos2122-24.herokuapp.com/api/v1/cancerdeaths-stats/docs">https://sos2122-24.herokuapp.com/api/v1/cancerdeaths-stats/docs </a>(developed by <a href="https://github.com/Rgm13">Raúl Gómez Morales</a>)</p>
         <p>- <a href="https://sos2122-24.herokuapp.com/api/v1/pneumonia-stats/docs">https://sos2122-24.herokuapp.com/api/v1/pneumonia-stats/docs </a>(developed by <a href="https://github.com/Lauramartinezsanchez">Laura Martínez Sánchez</a>)</p>
+        <p>- <a href="https://sos2122-24.herokuapp.com/api/v1/air-pollution-stats/docs">https://sos2122-24.herokuapp.com/api/v1/air-pollution-stats/docs </a>(developed by <a href="https://github.com/AliciaCamposCastello">Alicia Campos Castelló</a>)</p>
         
     </body>
 </html>
