--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,19 @@
-<html>
-    <body>
-        <h1>SOS2122-24</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset='utf-8'>
+	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-        <h3>Team</h3>
-        <p>- <a href="https://github.com/Rgm13">Raúl Gómez Morales</a></p>
-        <p>- <a href="https://github.com/Lauramartinezsanchez">Laura Martínez Sánchez</a></p>
-        <p>- <a href="https://github.com/AliciaCamposCastello">Alicia Campos Castelló</a></p>
-        
-        <h3>Project description:</h3> Nuestras fuentes de información esta orientadas a analizar la relación que existe entre la tasa de muertes por neumonia, la tasa de muertes por cancer y la contaminacion del aire en interiores. 
-        <h3>Repository:</h3><a href="https://github.com/gti-sos/SOS2122-24.git">gti-sos/SOS2122-24</a>
-        <h3>URL:</h3><a href="http://sos2122-24.herokuapp.com">http://sos2122-24.herokuapp.com</a>
-        <h3>APIS:</h3>
-        <p>- <a href="https://sos2122-24.herokuapp.com/api/v1/cancerdeaths-stats/docs">https://sos2122-24.herokuapp.com/api/v1/cancerdeaths-stats/docs </a>(developed by <a href="https://github.com/Rgm13">Raúl Gómez Morales</a>)</p>
-        <p>- <a href="https://sos2122-24.herokuapp.com/api/v1/pneumonia-stats/docs">https://sos2122-24.herokuapp.com/api/v1/pneumonia-stats/docs </a>(developed by <a href="https://github.com/Lauramartinezsanchez">Laura Martínez Sánchez</a>)</p>
-        <p>- <a href="https://sos2122-24.herokuapp.com/api/v1/air-pollution-stats/docs">https://sos2122-24.herokuapp.com/api/v1/air-pollution-stats/docs </a>(developed by <a href="https://github.com/AliciaCamposCastello">Alicia Campos Castelló</a>)</p>
-        
-    </body>
+	<title>SOS2122-24</title>
+
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
+	<link rel='icon' type='image/png' href='/favicon.png'>
+	<link rel='stylesheet' href='/global.css'>
+	<link rel='stylesheet' href='/build/bundle.css'>
+
+	<script defer src='/build/bundle.js'></script>
+</head>
+
+<body>
+</body>
 </html>
